# regstack

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  SECURITY.md  pyproject.toml  regstack.toml.example  tasks.py
.github/workflows/: publish.yml  test.yml
docs/: api.md  architecture.md  changelog.md  cli.md  conf.py  configuration.md  embedding.md  index.md  oauth.md  quickstart.md  security.md  theming.md
docs/security-reports/: 2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  README.md
examples/_common/: app.py
examples/minimal/: main.py  regstack.toml
examples/mongo/: README.md  main.py  regstack.toml
examples/mongo/branding/: theme.css
examples/postgres/: README.md  main.py  regstack.toml
examples/sqlite/: README.md  main.py  regstack.toml
scripts/: security-review-prompt.md
src/regstack/: __init__.py  app.py
src/regstack/auth/: __init__.py  clock.py  dependencies.py  jwt.py  lockout.py  mfa.py  password.py  tokens.py
src/regstack/backends/: __init__.py  base.py  factory.py  protocols.py
src/regstack/backends/mongo/: __init__.py  backend.py  client.py  indexes.py
src/regstack/backends/mongo/repositories/: __init__.py  login_attempt_repo.py  mfa_code_repo.py  oauth_identity_repo.py  oauth_state_repo.py  pending_repo.py  user_repo.py
src/regstack/backends/sql/: __init__.py  backend.py  schema.py  types.py
src/regstack/backends/sql/migrations/: __init__.py  env.py
src/regstack/backends/sql/migrations/versions/: 0001_initial_schema.py  0002_oauth.py
src/regstack/backends/sql/repositories/: blacklist_repo.py  login_attempt_repo.py  mfa_code_repo.py  oauth_identity_repo.py  oauth_state_repo.py  pending_repo.py  user_repo.py
src/regstack/cli/: __main__.py  _runtime.py  admin.py  doctor.py  init.py  migrate.py
src/regstack/config/: __init__.py  loader.py  schema.py  secrets.py
src/regstack/db/: __init__.py  client.py
src/regstack/db/repositories/: blacklist_repo.py  login_attempt_repo.py  mfa_code_repo.py  user_repo.py
src/regstack/email/: __init__.py  base.py  composer.py  console.py  factory.py  ses.py  smtp.py
src/regstack/email/templates/: email_change.html  email_change.subject.txt  email_change.txt  password_reset.html  password_reset.txt  sms_login_mfa.txt  sms_phone_setup.txt  verification.html  verification.subject.txt  verification.txt
src/regstack/hooks/: __init__.py  events.py
src/regstack/models/: __init__.py  _objectid.py  login_attempt.py  mfa_code.py  oauth_identity.py  oauth_state.py  pending_registration.py  user.py
src/regstack/oauth/: __init__.py  base.py  errors.py  registry.py
src/regstack/oauth/providers/: __init__.py  google.py
src/regstack/routers/: __init__.py  _schemas.py  account.py  admin.py  login.py  logout.py  oauth.py  password.py  phone.py  register.py  verify.py
src/regstack/sms/: __init__.py  base.py  factory.py  null.py  sns.py  twilio.py
src/regstack/ui/: __init__.py  pages.py
src/regstack/ui/static/css/: core.css  theme.css
src/regstack/ui/static/js/: regstack.js
src/regstack/ui/templates/: base.html
src/regstack/ui/templates/auth/: email_change_confirm.html  forgot.html  login.html  me.html  mfa_confirm.html  oauth_complete.html  register.html  reset.html  verify.html
src/regstack/wizard/: __init__.py
src/regstack/wizard/oauth_google/: __init__.py  cli.py  routes.py  server.py  validators.py  window.py  writer.py
src/regstack/wizard/oauth_google/static/: wizard.css  wizard.js
src/regstack/wizard/oauth_google/templates/: wizard.html
src/regstack/wizard/theme_designer/: __init__.py  cli.py  routes.py  server.py  validators.py  window.py  writer.py
src/regstack/wizard/theme_designer/static/: designer.css  designer.js
src/regstack/wizard/theme_designer/templates/: designer.html
tasks/: oauth-design.md
tests/: conftest.py
tests/_fake_google/: __init__.py  provider.py
tests/e2e/: conftest.py  test_theme_designer.py  test_wizard_oauth_flow.py
tests/integration/: test_account_management.py  test_admin_router.py  test_happy_path.py  test_indexes.py  test_login_lockout.py  test_mfa.py  test_oauth_google_router.py  test_oauth_repos.py  test_oauth_ui.py  test_password_reset.py  test_sql_migrations.py  test_ui_router.py  test_verification.py
tests/unit/: test_base_install_imports.py  test_cli.py  test_cli_doctor.py  test_cli_init.py  test_cli_migrate.py  test_config_loader.py  test_jwt.py  test_lockout.py  test_mail_composer.py  test_mfa_code_repo.py  test_oauth_google.py  test_password.py  test_ses_backend.py  test_sms.py  test_smtp_backend.py  test_theme_designer_cli.py  test_theme_designer_routes.py  test_theme_designer_validators.py  test_theme_designer_writer.py  test_ui_env.py  test_wizard_oauth_cli.py  test_wizard_oauth_routes.py  test_wizard_oauth_validators.py  test_wizard_oauth_writer.py
