[project]
name = "regstack"
version = "0.4.0"
description = "Embeddable user registration, login, and account management for FastAPI apps. SQLite / Postgres / MongoDB."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Joe Drumgoole", email = "joe@joedrumgoole.com" }]
keywords = ["fastapi", "mongodb", "auth", "registration", "users"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.8",
    "jinja2>=3.1",
    "click>=8.1",
    "dnspython>=2.6",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "aiosmtplib>=3.0",
    # SQL stack — bundled by default because SQLite is the default backend.
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # OAuth setup wizard (regstack oauth setup) — needs a webview shell,
    # a small in-process FastAPI server, and round-trip-safe TOML editing.
    "pywebview>=5.0",
    "tomlkit>=0.13",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
mongo = ["pymongo>=4.9"]
ses = ["aioboto3>=12.3"]
sns = ["aioboto3>=12.3"]
twilio = ["twilio>=9.0"]
oauth = ["pyjwt[crypto]>=2.8"]
docs = [
    "sphinx>=7.3",
    "myst-parser>=3.0",
    "furo>=2024.1",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "anyio>=4.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "invoke>=2.2",
    "uvicorn[standard]>=0.29",
    # All backend drivers in dev so the parametrized test suite can run.
    "pymongo>=4.9",
    "asyncpg>=0.29",
    # OAuth provider tests need the crypto bits to verify ID tokens.
    "pyjwt[crypto]>=2.8",
    # E2E tests for the OAuth setup wizard (drives the SPA in headless Chromium).
    "pytest-playwright>=0.5",
]

[project.scripts]
regstack = "regstack.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/jdrumgoole/regstack"
Repository = "https://github.com/jdrumgoole/regstack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regstack"]
# Hatch's package autodiscovery already picks up template / static assets
# under src/regstack — no force-include needed (it would double-pack).

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "e2e: end-to-end Playwright tests (run serially, slow)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    # uvicorn[standard] still imports websockets.legacy on shutdown,
    # which fires a DeprecationWarning. The wizard's e2e fixture runs
    # uvicorn in a thread and pytest's threadexception plugin promotes
    # thread warnings to errors — silence at the source.
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.*",
    # CI surfaces PytestUnraisableExceptionWarning when async fixtures
    # from a previous test leak sockets/event loops past their cleanup
    # window — the sync UI tests shouldn't fail just because asyncpg or
    # aiosqlite teardown was sloppy in a sibling test.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",
    # `Depends(...)` in argument defaults is the canonical FastAPI pattern.
    "B008",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/regstack"]
branch = true
parallel = true
# `concurrency = ["thread"]` is implicit; pytest-xdist workers each write
# their own .coverage.<host>.<pid>.<token> file and `coverage combine`
# folds them together — see the `coverage` invoke task.

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.$",                   # body-less Protocol methods
]

[tool.coverage.html]
directory = "htmlcov"
